[package]
name = "rr-rs"
version = "0.0.1"
authors = ["Cassandra McCarthy <cassie@7596ff.com>"]
edition = "2018"
description = "A discord bot that does many things besides change the server icon occasionally."
readme = "README.md"
repository = "https://github.com/7596ff/rr-rs"
license-file = "LICENSE"
default-run = "rr-rs"

[dependencies]
# base
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = "1"
# twilight
twilight-cache-inmemory = "0.5"
twilight-embed-builder = "0.5"
twilight-gateway = "0.5"
twilight-http = { version = "0.5", features = ["rustls"] }
twilight-mention = "0.5"
twilight-model = "0.5"
twilight-permission-calculator = { default-features = false, git = "https://github.com/7596ff/permission-calculator", branch = "v0.5" }
twilight-standby = "0.5"
# discord
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock", "serde"] }
chrono-humanize = "0.2"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["client", "http1"] }
image = "0.23"
lazy_static = { version = "1.4", default-features = false }
rand = "0.8"
regex = "1"
hyper-rustls = "0.22"
serde = "1.0"
serde_json = "1.0"
#serde_postgres = "0.2"
serde_postgres = { git = "https://github.com/OtterCode/serde_postgres" }
shellwords = { version = "1.1", default-features = false }
# db
darkredis = "0.8"
postgres = "0.19"
refinery = { version = "0.5", default-features = false, features = [ "postgres" ] }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime", "with-chrono-0_4"] }

[[bin]]
name = "migrate_icons"
test = false
bench = false
